# ofpgs_ros

./: .gitignore  CMakeLists.txt  LICENSE  PRE_PUBLICATION_CHECKLIST.md  README.md  final-project-start-headless.py  final-project-start.py  final-project-world.py  package.xml  process_handler.py
config/: foundationpose_config.yaml
launch/: circle_table_mover.launch  foundationpose_pose_estimation.launch  foundationpose_with_grounded_sam.launch  foundationpose_with_sam.launch
meshes/: README.txt
metrics/: plot_metrics.py
readmes/: README_FOUNDATIONPOSE_SETUP.md  README_GROUNDED_SAM_SETUP.md  README_SAM_SETUP.md
rviz/: final-project-rviz.rviz  hsr.rviz
scripts/: circle_table_mover.py  foundationpose_pose_estimation_node.py  grounded_sam_segmentation_node.py  run_foundationpose.sh  run_grounded_sam_segmentation.sh  run_sam_segmentation.sh  sam_segmentation_node.py
setup/: patch_pytorch_cuda_check.py  setup_grounded_sam.sh  setup_sam.sh
